--- a/facshop-shipment/src/main/webapp/admin/index.xhtml
+++ b/facshop-shipment/src/main/webapp/admin/index.xhtml
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='UTF-8'?>
+<?xml version="1.0" encoding="UTF-8"?>
 <ui:composition 
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
