Усовершенствовал систему безопастности

--- a/facshop-shipment/src/main/webapp/login.xhtml
+++ b/facshop-shipment/src/main/webapp/login.xhtml
@@ -7,7 +7,7 @@
                 template="/template.xhtml">
 
     <ui:define name="title">
-        Login
+        #{bundle.Login_label}
     </ui:define>
 
     <ui:define name="body">
