Отредактировал страницу с ошибками

--- a/facshop-store/src/main/webapp/error.xhtml
+++ b/facshop-store/src/main/webapp/error.xhtml
@@ -9,7 +9,7 @@
     xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
     <ui:define name="title">
-        #{bundle.ErrorTitle}
+        #{bundle.ErrorPageTitle}
     </ui:define>
 
     <ui:define name="body">
